Improve nixie handling of dye and resolve review